--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,13 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
