--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 # REACT_APP_NODE_API=http://localhost:4000
-REACT_APP_NODE_API=https://flamingo-server.onrender.com/
+REACT_APP_NODE_API=https://flamingo-server.onrender.com
