--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
