--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "semantic-ui-react": "^2.1.5",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
